[gd_scene load_steps=6 format=3 uid="uid://8lp4qx7vykdy"]

[ext_resource type="Script" uid="uid://d0o5s4ibnq08x" path="res://Microjuegos/Ramiro/22_Atrápalo/Script/atrapalo_6.gd" id="1_hlwow"]
[ext_resource type="Texture2D" uid="uid://cnpij3bucijph" path="res://Fondos/Fondocielo.png" id="2_hlat2"]
[ext_resource type="Texture2D" uid="uid://ccahi454ny40h" path="res://Microjuegos/Ramiro/22_Atrápalo/Sprites/gatocaja.png" id="3_cpgoq"]
[ext_resource type="Texture2D" uid="uid://c4i174hdyxd7f" path="res://Microjuegos/Ramiro/22_Atrápalo/Sprites/rat.png" id="4_cv7xx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hlwow"]
bg_color = Color(0.164706, 0.164706, 0.164706, 0.486275)

[node name="MicroAtrapalo" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_hlwow")

[node name="Fondo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1922.0
offset_bottom = 1090.0
texture = ExtResource("2_hlat2")

[node name="Caja" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 627.0
offset_top = 494.0
offset_right = 1256.0
offset_bottom = 1123.0
texture = ExtResource("3_cpgoq")

[node name="Raton" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 811.0
offset_top = 300.0
offset_right = 1131.0
offset_bottom = 620.0
texture = ExtResource("4_cv7xx")

[node name="ZonaCaptura" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 891.0
offset_top = 300.0
offset_right = 1090.0
offset_bottom = 506.0
color = Color(0.992538, 0, 0.17589, 1)

[node name="TimerJuego" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="TextoControles" type="Label" parent="."]
layout_mode = 0
offset_left = -5.0
offset_top = 746.0
offset_right = 445.0
offset_bottom = 1082.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_hlwow")
text = "Presiona:
[A]
En la zona
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextoInstruccion" type="Label" parent="."]
layout_mode = 0
offset_left = 352.0
offset_top = 440.0
offset_right = 1592.0
offset_bottom = 671.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_hlwow")
text = "¡Presiona A en la Zona!"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="TimerJuego" to="." method="_on_TimerJuego_timeout"]
